# MFSynced

./: deploy.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  tail.py
MFSynced/: .gitignore  Info.plist  Package.swift  build-app.sh  entitlements.plist
MFSynced/.build/: build.db  debug.yaml
MFSynced/Sources/MFSynced/: MFSyncedApp.swift
MFSynced/Tests/MFSyncedTests/: AppleDateConverterTests.swift  AttributedBodyParserTests.swift  CRMSyncServiceTests.swift  ChatDatabaseTests.swift  SyncQueueDatabaseTests.swift
docs/superpowers/plans/: 2026-03-27-mfsynced.md
docs/superpowers/specs/: 2026-03-27-mfsynced-design.md
e2e/: forward-to-leroy.spec.ts  forward-to-marco.spec.ts  inspect-thread.ts  staging-auth.spec.ts  sync-and-fyi.spec.ts
scripts/: resync_history.py  test_e2e_pipeline.py
web/backend/: .dockerignore  .env  Dockerfile  pyproject.toml
web/backend/app/: config.py  db.py  main.py
web/backend/app/api/: agent.py  auth.py  conversations.py  deps.py  forward.py  inbox.py  upload.py  users.py
web/backend/app/schemas/: agent.py  auth.py  forward.py  inbox.py  message.py
web/backend/app/services/: agent_service.py  message_service.py  outbound_service.py
web/backend/migrations/: 001_initial.sql  002_attachments_reactions.sql  003_forward_dedup.sql  004_archive.sql
web/backend/scripts/: migrate.py
web/backend/tests/: conftest.py  test_forwarding_access.py  test_message_ordering.py  test_reply_flow.py
web/frontend/: Dockerfile  cloudbuild.yaml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+356 files in other folders)
